# obm_confluent_blog

./: .gitignore  create-certs.sh  docker-bank.yml  prepare.sh  setup-db.sh
command-handler/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  pom.xml
command-handler/migrations/2018-07-19-132140_ch/: down.sql  up.sql
command-handler/src/: avro_data.rs  kafka_consumer.rs  kafka_context.rs  kafka_producer.rs  kafka_ssl.rs  logger.rs  main.rs
command-handler/src/db/: mod.rs  models.rs  schema.rs  util.rs
command-handler/src/main/kotlin/nl/openweb/commandhandler/: AccountCreation.kt  AccountCreationProcessor.kt  Model.kt  MoneyTransfer.kt  MoneyTransferProcessor.kt
command-handler/src/main/resources/: application.yml
frontend/: build-and-copy-frontend.sh  project.clj
resources/: clojure-ssl-2019-08-06-21-14.edn  clojure-ssl-2019-08-06-22-10.edn  clojure-ssl-2019-08-06-23-14.edn  clojure-ssl-2019-08-07-00-15.edn  clojure-ssl-2019-08-07-01-16.edn  clojure-ssl-2019-08-07-02-05.edn  clojure-ssl-2019-08-07-03-06.edn  clojure-ssl-2019-08-07-04-08.edn  clojure-ssl-2019-08-07-05-07.edn  clojure-ssl-2019-08-07-05-58.edn  mapping.edn  rust-ssl-async-2019-08-04-22-06.edn  rust-ssl-async-2019-08-04-22-56.edn  rust-ssl-async-2019-08-04-23-17.edn  rust-ssl-async-2019-08-05-00-01.edn  rust-ssl-async-2019-08-05-00-48.edn  rust-ssl-async-2019-08-05-01-33.edn  rust-ssl-async-2019-08-05-02-14.edn  rust-ssl-async-2019-08-05-02-55.edn  rust-ssl-async-2019-08-05-03-41.edn  rust-ssl-async-2019-08-05-04-28.edn  rust-ssl-static-2019-08-07-21-14.edn  rust-ssl-static-2019-08-07-22-03.edn  rust-ssl-static-2019-08-07-22-54.edn  rust-ssl-static-2019-08-07-23-43.edn  rust-ssl-static-2019-08-08-00-31.edn  rust-ssl-static-2019-08-08-01-19.edn  rust-ssl-static-2019-08-08-02-09.edn  rust-ssl-static-2019-08-08-03-02.edn  rust-ssl-static-2019-08-08-03-52.edn  rust-ssl-static-2019-08-08-04-40.edn  rust-ssl-sync-2019-08-05-18-27.edn  rust-ssl-sync-2019-08-05-19-14.edn  rust-ssl-sync-2019-08-05-20-01.edn  rust-ssl-sync-2019-08-05-20-44.edn  (+6 more)
(+6 files in other folders)
