[package]
name = "rust-command-handler"
version = "0.1.0"
authors = ["gklijs <g.klijs@gmail.com>"]
edition = "2018"

[dependencies]

avro-rs = "^0.6.5"
byteorder = "1.3.1"
chrono = "^0.4.6"
curl = "0.4.19"
diesel = { version = "1.4.2", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "0.13.0"
env_logger = "0.6.1"
failure = "^0.1.5"
log = "0.4.6"
r2d2 = "0.8.4"
rand = "^0.5.0"
rdkafka = {version = "0.21.0", features = ["ssl"]}
rdkafka-sys = "1.0.0"
schema_registry_converter = { git = "https://github.com/gklijs/schema_registry_converter.git", branch = "issue_12"}
serde = {version = "1.0.97", features = ["derive"]}
serde_json = "^1.0.38"
uuid = "0.6.5"

