[package]
name = "rust-command-handler"
version = "0.1.0"
authors = ["gklijs <g.klijs@gmail.com>"]
edition = "2018"

[dependencies]
rdkafka = "0.21.0"
futures = "^0.1.25"
log = "0.4.6"
env_logger = "0.6.1"
chrono = "^0.4.6"
rdkafka-sys = "1.0.0"
avro-rs = "^0.6.5"
failure = "^0.1.5"
byteorder = "1.3.1"
serde_json = "^1.0.38"
curl = "0.4.19"
diesel = { version = "1.4.2", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "0.13.0"
uuid = "0.6.5"
rand = "^0.5.0"
schema_registry_converter = "1.0.0"
r2d2 = "0.8.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

